--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.7.2",
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
+    "reactjs-popup": "^2.0.6",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
